--- a/sunmall/pom.xml
+++ b/sunmall/pom.xml
@@ -81,6 +81,7 @@
             <plugin>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.16.18.0</version>
             </plugin>
         </plugins>
     </build>
