--- a/sunmall-webapp/src/main/resources/application.yml
+++ b/sunmall-webapp/src/main/resources/application.yml
@@ -4,6 +4,16 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=true
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
 
 server:
   port: 80
+
+# 不启用springsecurity
+security:
+  basic:
+    enabled: false
+
