--- a/sunmall-webapp/src/main/resources/application.yml
+++ b/sunmall-webapp/src/main/resources/application.yml
@@ -8,6 +8,15 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
+  mail:
+    host: smtp.qq.com
+    username: 865840379@qq.com
+    password: lwcmqswzrpcebbag
+#    properties:
+#      mail:
+#        smtp:
+#          ssl:
+#            enable: true
 
 server:
   port: 80
@@ -17,3 +26,5 @@ security:
   basic:
     enabled: false
 
+
+#debug: true
